--- a/yaml/jobs/deploy.yml
+++ b/yaml/jobs/deploy.yml
@@ -213,6 +213,7 @@ jobs:
       -NotifyEmailChangeConfirmationEmailOldEmailTemplateId "${{parameters.notifyEmailChangeConfirmationEmailOldEmailTemplateId}}"
       -TncFileName "${{parameters.tncFileName}}"
       -B2CCustomDomain "$(b2cCustomDomain)"'
+      -sharedResourceGroupName "s141$(environmentId)-shd"
 
   strategy:
     runOnce:
