--- a/yaml/jobs/deploy.yml
+++ b/yaml/jobs/deploy.yml
@@ -213,7 +213,8 @@ jobs:
       -NotifyEmailChangeConfirmationEmailOldEmailTemplateId "${{parameters.notifyEmailChangeConfirmationEmailOldEmailTemplateId}}"
       -TncFileName "${{parameters.tncFileName}}"
       -B2CCustomDomain "$(b2cCustomDomain)"
-      -sharedResourceGroupName "s141${{parameters.environmentId}}-shd"'
+      -sharedResourceGroupName "s141${{parameters.environmentId}}-shd"
+      -virtualNetworkName "s141${{parameters.environmentId}}-signin-shd-vnet"'
 
   strategy:
     runOnce:
