--- a/yaml/jobs/deploy-grouped.yml
+++ b/yaml/jobs/deploy-grouped.yml
@@ -130,6 +130,8 @@ jobs:
       value: 't02'
     ${{ elseif eq(parameters.environmentName, 'prod') }}:
       value: 'pr'
+    ${{ else }}:
+      value: ${{parameters.environmentId}}
   - name: overrideParameters
     value: '
       -applicationName "${{parameters.applicationName}}"
@@ -183,8 +185,8 @@ jobs:
       -NotifyEmailChangeConfirmationEmailOldEmailTemplateId "$(notifyEmailChangeConfirmationEmailOldEmailTemplateId)"
       -TncFileName "${{parameters.tncFileName}}"
       -B2CCustomDomain "$(b2cCustomDomain)"
-      -sharedResourceGroupName "s141${{parameters.environmentId}}-shd"
-      -virtualNetworkName "s141${{parameters.environmentId}}-signin-shd-vnet"'
+      -sharedResourceGroupName "s141$(enviromentIdShd)-shd"
+      -virtualNetworkName "s141$(enviromentIdShd)-signin-shd-vnet"'
 
   strategy:
     runOnce:
