--- a/yaml/jobs/deploy-grouped.yml
+++ b/yaml/jobs/deploy-grouped.yml
@@ -186,7 +186,7 @@ jobs:
       -TncFileName "${{parameters.tncFileName}}"
       -B2CCustomDomain "$(b2cCustomDomain)"
       -sharedResourceGroupName "s141${{parameters.environmentId}}-shd"
-      -virtualNetworkName "s141$(enviromentIdShd)-signin-shd-vnet"'
+      -virtualNetworkName "s141${{parameters.environmentId}}-signin-shd-vnet"'
 
   strategy:
     runOnce:
