--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -127,14 +127,18 @@ stages:
           - template: pipeline/ncs-b2c/tenant-setup.yml@devopsTemplates
             parameters:
               ${{ if or(eq(var.key, 'dev'), eq(var.key, 'tran')) }}:
+                environmentName: dev
                 eapimRootUrl: ${{var.key}}-api-customerengagement.platform.education.gov.uk
               ${{ elseif eq(var.key, 'pr') }}:
                 eapimRootUrl: api-customerengagement.platform.education.gov.uk
+                environmentName: prod
               ${{ elseif eq(var.key, 'pp') }}:
                   eapimRootUrl: oat-api-customerengagement.platform.education.gov.uk
+                  environmentName: preprod
               ${{ elseif eq(var.key, 'test') }}:
                 eapimRootUrl: ${{var.key}}-api-customerengagement.platform.education.gov.uk
-              environmentName: ${{var.key}}
+                environmentName: test
+              
               applicationName: ${{variables.applicationShortName}}
 
           - template: pipeline/ncs-b2c/infrastructure.yml@devopsTemplates
