--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -144,7 +144,10 @@ stages:
           
           - template: pipeline/ncs-b2c/tenant-setup.yml@devopsTemplates
             parameters:
-              ${{ if or(eq(var.key, 'dev'), eq(var.key, 'tran')) }}:
+              ${{ if eq(var.key, 'tran') }}:
+                environmentName: tran
+                eapimRootUrl: ${{var.key}}-api-customerengagement.platform.education.gov.uk
+              ${{ if eq(var.key, 'dev') }}:
                 environmentName: dev
                 eapimRootUrl: ${{var.key}}-api-customerengagement.platform.education.gov.uk
               ${{ elseif eq(var.key, 'pr') }}:
