Update secretsTransfer.yml for Azure Pipelines

--- a/secretsTransfer.yml
+++ b/secretsTransfer.yml
@@ -14,8 +14,21 @@ variables:
 
 stages:
 
+
+    
 # Code scaning tools
 - stage: KeyVault
   displayName: Load Secrets in KeyVault 
   jobs:
   - template:  Archives/pipeline/secretsLoadsInVault.yml@devopsTemplates
+  job:
+  - task: ManualIntervention@8
+    inputs:
+    instructions: 'Wait for the regrassion test to pass. If all okay reject'
+  - task: Bash@3
+    inputs:
+      targetType: 'inline'
+      script: |
+        # Write your commands here
+        
+        echo 'Hello world'
