--- a/secretsTransfer.yml
+++ b/secretsTransfer.yml
@@ -21,14 +21,15 @@ stages:
   displayName: Load Secrets in KeyVault 
   jobs:
   - template:  Archives/pipeline/secretsLoadsInVault.yml@devopsTemplates
-  job:
-  - task: ManualIntervention@8
-    inputs:
-    instructions: 'Wait for the regrassion test to pass. If all okay reject'
-  - task: Bash@3
-    inputs:
-      targetType: 'inline'
-      script: |
-        # Write your commands here
-        
-        echo 'Hello world'
+  - job:
+    steps:
+    - task: ManualIntervention@8
+      inputs:
+      instructions: 'Wait for the regrassion test to pass. If all okay reject'
+    - task: Bash@3
+      inputs:
+        targetType: 'inline'
+        script: |
+          # Write your commands here
+          
+          echo 'Hello world'
