Update secretsTransfer.yml for Azure Pipelines

--- a/secretsTransfer.yml
+++ b/secretsTransfer.yml
@@ -21,6 +21,8 @@ stages:
   displayName: Load Secrets in KeyVault 
   jobs:
   - job:
+    pool:
+      vmImage: windows-latest
     steps:
     - task: ManualIntervention@8
       inputs: 
