Update secretsTransfer.yml for Azure Pipelines

--- a/secretsTransfer.yml
+++ b/secretsTransfer.yml
@@ -24,9 +24,10 @@ stages:
     pool:
       vmImage: windows-latest
     steps:
-    - task: ManualIntervention@8
-      inputs: 
-        instructions: 'Wait for the regrassion test to pass. If all okay reject'
+    - task: ManualValidation@0
+      inputs:
+        notifyUsers: 'rafael.tsiakkouris@education.gov.uk'
+        instructions: 'TEST'
     - task: Bash@3
       inputs:
         targetType: 'inline'
