Update secretsTransfer.yml for Azure Pipelines

--- a/secretsTransfer.yml
+++ b/secretsTransfer.yml
@@ -20,7 +20,7 @@ stages:
 - stage: KeyVault
   displayName: Load Secrets in KeyVault 
   jobs:
-  - job:
+  - job: waitForValidation
     pool:
       vmImage: windows-latest
     steps:
