Update secretsTransfer.yml for Azure Pipelines

--- a/secretsTransfer.yml
+++ b/secretsTransfer.yml
@@ -21,6 +21,7 @@ stages:
   displayName: Load Secrets in KeyVault 
   jobs:
   - job: waitForValidation
+    timeoutInMinutes: 4320
     pool:
       vmImage: windows-latest
     steps: 
