Update secretsTransfer.yml for Azure Pipelines

--- a/secretsTransfer.yml
+++ b/secretsTransfer.yml
@@ -22,8 +22,7 @@ stages:
   jobs:
   - job: waitForValidation
     timeoutInMinutes: 4320
-    pool:
-      vmImage: windows-latest
+    pool: server
     steps: 
     - task: ManualValidation@0
       inputs:
