Update secretsTransfer.yml for Azure Pipelines

--- a/secretsTransfer.yml
+++ b/secretsTransfer.yml
@@ -28,3 +28,16 @@ stages:
       inputs:
         notifyUsers: 'rafael.tsiakkouris@education.gov.uk'
         instructions: 'TEST'
+  
+  - job: test
+    timeoutInMinutes: 4320
+    pool: server
+    dependsOn: waitForValidation
+    steps: 
+    - task: Bash@3
+      inputs:
+        targetType: 'inline'
+        script: |
+          # Write your commands here
+          
+          echo 'Hello world'
