Update secretsTransfer.yml for Azure Pipelines

--- a/secretsTransfer.yml
+++ b/secretsTransfer.yml
@@ -17,21 +17,22 @@ stages:
 
     
 # Code scaning tools
-- stage: KeyVault
+- stage: RevertSlot
   displayName: Load Secrets in KeyVault 
   jobs:
   - job: waitForValidation
-    timeoutInMinutes: 4320
+    timeoutInMinutes: 2
     pool: server
     steps: 
-    - task: ManualValidation@0
+    - task: ManualIntervention@8
       inputs:
-        notifyUsers: 'rafael.tsiakkouris@education.gov.uk'
-        instructions: 'TEST'
+        instructions: 'if back roll needed'
   
+- stage: Revert slot
+  displayName: swap back
+  dependsOn: RevertSlot
+  jobs:
   - job: test
-    timeoutInMinutes: 4320
-    dependsOn: waitForValidation
     steps: 
     - task: Bash@3
       inputs:
