Update secretsTransfer.yml for Azure Pipelines

--- a/secretsTransfer.yml
+++ b/secretsTransfer.yml
@@ -17,7 +17,7 @@ stages:
 
     
 # Code scaning tools
-- stage: RevertSlot
+- stage: RevertSlotValidation
   displayName: Load Secrets in KeyVault 
   jobs:
   - job: waitForValidation
@@ -28,7 +28,7 @@ stages:
       inputs:
         instructions: 'if back roll needed'
   
-- stage: Revert slot
+- stage: RevertSlot
   displayName: swap back
   dependsOn: RevertSlot
   jobs:
