Update secretsTransfer.yml for Azure Pipelines

--- a/secretsTransfer.yml
+++ b/secretsTransfer.yml
@@ -30,7 +30,7 @@ stages:
   
 - stage: RevertSlot
   displayName: swap back
-  dependsOn: RevertSlot
+  dependsOn: RevertSlotValidation
   jobs:
   - job: test
     steps: 
