Update secretsTransfer.yml for Azure Pipelines

--- a/secretsTransfer.yml
+++ b/secretsTransfer.yml
@@ -27,6 +27,7 @@ stages:
     - task: ManualIntervention@8
       inputs:
         instructions: 'if back roll needed'
+        emailRecipients: 'test@test.com'
   
 - stage: RevertSlot
   displayName: swap back
