Update secretsTransfer.yml for Azure Pipelines

--- a/secretsTransfer.yml
+++ b/secretsTransfer.yml
@@ -24,10 +24,9 @@ stages:
     timeoutInMinutes: 2
     pool: server
     steps: 
-    - task: ManualIntervention@8
+    - task: ManualValidation@0
       inputs:
-        instructions: 'if back roll needed'
-        emailRecipients: 'test@test.com'
+        notifyUsers: 'test@test.com'
   
 - stage: RevertSlot
   displayName: swap back
