Update secretsTransfer.yml for Azure Pipelines

--- a/secretsTransfer.yml
+++ b/secretsTransfer.yml
@@ -28,11 +28,8 @@ stages:
       inputs:
         notifyUsers: 'test@test.com'
   
-- stage: RevertSlot
-  displayName: swap back
-  dependsOn: RevertSlotValidation
-  jobs:
   - job: test
+    condition: waitForValidation
     steps: 
     - task: Bash@3
       inputs:
@@ -41,3 +38,5 @@ stages:
           # Write your commands here
           
           echo 'Hello world'
+  
+  
