Update secretsTransfer.yml for Azure Pipelines

--- a/secretsTransfer.yml
+++ b/secretsTransfer.yml
@@ -29,7 +29,7 @@ stages:
         notifyUsers: 'test@test.com'
   
   - job: test
-    condition: waitForValidation
+    dependsOn: waitForValidation
     steps: 
     - task: Bash@3
       inputs:
