--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -104,9 +104,9 @@ stages:
 
     - template:  pipeline/eslint.yml@devopsTemplates
 
-    - template:  pipeline/dependencyCheck.yml@devopsTemplates
-      parameters:
-        npmInstCmd: 'install --force --json --no-package-lock'
+#    - template:  pipeline/dependencyCheck.yml@devopsTemplates
+#      parameters:
+#        npmInstCmd: 'install --force --json --no-package-lock'
 
     - template: pipeline/NetBuild.yml@devopsTemplates
       parameters:
