--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -112,67 +112,69 @@ stages:
       parameters:
         applicationName: ${{variables.applicationFullName}}
 
-- ${{ each var in variables }}:
-  - ${{ if in(var.key, 'tran','dev','test','pp','pr') }}:
-    - ${{ if eq(var.value, 'true') }}:
-      - stage: Deployment_${{var.Key}}
-        displayName: "Deployment [${{var.Key}}]"
-        dependsOn: 
-        - scanBuildApp
-        condition: in(dependencies.scanBuildApp.result, 'Succeeded', 'Skipped')
-        variables:
-        - group: dsi-${{var.key}}-kv
-        jobs:
-        - ${{ if parameters.InfrDeploy }}:
+    - template: secretsTransfer.yml
 
-          - template: pipeline/ncs-b2c/infrastructure.yml@devopsTemplates
-            parameters:
-              ${{ if or(eq(var.key, 'dev'), eq(var.key, 'tran')) }}:
-                serviceConnection: $(devServiceConnection)
-                eapimEnvironmentName: 'Development'
-              ${{ elseif eq(var.key, 'pr') }}:
-                serviceConnection: $(prodServiceConnection)
-                eapimEnvironmentName: 'Production'
-              ${{ else }}:
-                serviceConnection: $(testServiceConnection)
-                ${{ if eq(var.key, 'pp') }}:
-                  eapimEnvironmentName: 'Oat'
-                ${{ elseif eq(var.key, 'test') }}:
-                  eapimEnvironmentName: 'Test'
-              environmentName: ${{var.key}}
-              applicationName: ${{variables.applicationShortName}}
+#- ${{ each var in variables }}:
+#  - ${{ if in(var.key, 'tran','dev','test','pp','pr') }}:
+#    - ${{ if eq(var.value, 'true') }}:
+#      - stage: Deployment_${{var.Key}}
+#        displayName: "Deployment [${{var.Key}}]"
+#        dependsOn: 
+#        - scanBuildApp
+#        condition: in(dependencies.scanBuildApp.result, 'Succeeded', 'Skipped')
+#        variables:
+#        - group: dsi-${{var.key}}-kv
+#        jobs:
+#        - ${{ if parameters.InfrDeploy }}:
+
+#          - template: pipeline/ncs-b2c/infrastructure.yml@devopsTemplates
+#            parameters:
+#              ${{ if or(eq(var.key, 'dev'), eq(var.key, 'tran')) }}:
+#                serviceConnection: $(devServiceConnection)
+#                eapimEnvironmentName: 'Development'
+#              ${{ elseif eq(var.key, 'pr') }}:
+#                serviceConnection: $(prodServiceConnection)
+#                eapimEnvironmentName: 'Production'
+#              ${{ else }}:
+#                serviceConnection: $(testServiceConnection)
+#                ${{ if eq(var.key, 'pp') }}:
+#                  eapimEnvironmentName: 'Oat'
+#                ${{ elseif eq(var.key, 'test') }}:
+#                  eapimEnvironmentName: 'Test'
+#              environmentName: ${{var.key}}
+#              applicationName: ${{variables.applicationShortName}}
           
-          - template: pipeline/ncs-b2c/tenant-setup.yml@devopsTemplates
-            parameters:
-              ${{ if eq(var.key, 'tran') }}:
-                environmentName: tran
-                eapimRootUrl: ${{var.key}}-api-customerengagement.platform.education.gov.uk
-              ${{ if eq(var.key, 'dev') }}:
-                environmentName: dev
-                eapimRootUrl: ${{var.key}}-api-customerengagement.platform.education.gov.uk
-              ${{ elseif eq(var.key, 'pr') }}:
-                eapimRootUrl: api-customerengagement.platform.education.gov.uk
-                environmentName: prod
-              ${{ elseif eq(var.key, 'pp') }}:
-                  eapimRootUrl: oat-api-customerengagement.platform.education.gov.uk
-                  environmentName: preprod
-              ${{ elseif eq(var.key, 'test') }}:
-                eapimRootUrl: ${{var.key}}-api-customerengagement.platform.education.gov.uk
-                environmentName: test
-              applicationName: ${{variables.applicationShortName}}
+#          - template: pipeline/ncs-b2c/tenant-setup.yml@devopsTemplates
+#            parameters:
+#              ${{ if eq(var.key, 'tran') }}:
+#                environmentName: tran
+#                eapimRootUrl: ${{var.key}}-api-customerengagement.platform.education.gov.uk
+#              ${{ if eq(var.key, 'dev') }}:
+#                environmentName: dev
+#                eapimRootUrl: ${{var.key}}-api-customerengagement.platform.education.gov.uk
+#              ${{ elseif eq(var.key, 'pr') }}:
+#                eapimRootUrl: api-customerengagement.platform.education.gov.uk
+#                environmentName: prod
+#              ${{ elseif eq(var.key, 'pp') }}:
+#                  eapimRootUrl: oat-api-customerengagement.platform.education.gov.uk
+#                  environmentName: preprod
+#              ${{ elseif eq(var.key, 'test') }}:
+#                eapimRootUrl: ${{var.key}}-api-customerengagement.platform.education.gov.uk
+#                environmentName: test
+#              applicationName: ${{variables.applicationShortName}}
 
-        - ${{ if parameters.AppDeploy }}:
-          - template: pipeline/funDeploy.yml@devopsTemplates
-            parameters: 
-              ${{ if or(eq(var.key, 'dev'), eq(var.key, 'tran')) }}:
-                serviceConnection: $(devServiceConnection)
-              ${{ elseif eq(var.key, 'pr') }}:
-                serviceConnection: $(prodServiceConnection)
-              ${{ else }}:
-                serviceConnection: $(testServiceConnection)
-              environmentName: ${{var.key}}
-              applicationShortName: ${{variables.applicationShortName}}
-              applicationFullName: ${{variables.applicationFullName}}
-              releaseArtifactName: ${{variables.applicationFullName}}-$(Build.BuildId)-release
-              InfrDeploy: ${{parameters.InfrDeploy}}
+#        - ${{ if parameters.AppDeploy }}:
+#          - template: pipeline/funDeploy.yml@devopsTemplates
+#            parameters: 
+#              ${{ if or(eq(var.key, 'dev'), eq(var.key, 'tran')) }}:
+#                serviceConnection: $(devServiceConnection)
+#              ${{ elseif eq(var.key, 'pr') }}:
+#                serviceConnection: $(prodServiceConnection)
+#              ${{ else }}:
+#                serviceConnection: $(testServiceConnection)
+#              environmentName: ${{var.key}}
+#              applicationShortName: ${{variables.applicationShortName}}
+#              applicationFullName: ${{variables.applicationFullName}}
+#              releaseArtifactName: ${{variables.applicationFullName}}-$(Build.BuildId)-release
+#              InfrDeploy: ${{parameters.InfrDeploy}}
     
