Moved the parameters in secretsTransfer.yml to azure-pipelines.yml

--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -57,6 +57,8 @@ parameters:
 
 variables:
 - group: dsi-global
+- group: ncs-b2c-global
+- group: ncs-b2c-dev
 - name: applicationShortName
   value: 'authncs'
 - name: applicationFullName
