--- a/secretsTransfer.yml
+++ b/secretsTransfer.yml
@@ -1,16 +1,16 @@
-name: $(BuildDefinitionName)_tag-$(BuildID)_at-$(Date:yyyyMMdd)$(Rev:.r)
-resources:
-  repositories:
-  # Defult branch is master
-    - repository: devopsTemplates
-      type: github
-      endpoint: DfE-Digital
-      name: DFE-Digital/login.dfe.devops
-      ref: feature/DSI-5680
+#name: $(BuildDefinitionName)_tag-$(BuildID)_at-$(Date:yyyyMMdd)$(Rev:.r)
+#resources:
+#  repositories:
+#  # Defult branch is master
+#    - repository: devopsTemplates
+#      type: github
+#      endpoint: DfE-Digital
+#      name: DFE-Digital/login.dfe.devops
+#      ref: feature/DSI-5680
 
-variables:
-- group: ncs-b2c-global
-- group: ncs-b2c-dev
+#variables:
+#- group: ncs-b2c-global
+#- group: ncs-b2c-dev
 
 stages:
 
