Commented out stage and display name

--- a/secretsTransfer.yml
+++ b/secretsTransfer.yml
@@ -17,8 +17,8 @@
 
     
 # Code scaning tools
-- stage: RevertSlotValidation
-  displayName: Load Secrets in KeyVault 
+#- stage: RevertSlotValidation
+#  displayName: Load Secrets in KeyVault 
   jobs:
   - job: waitForValidation
     timeoutInMinutes: 2
