Commented out unwanted jobs

--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -110,9 +110,9 @@ stages:
 #      parameters:
 #        npmInstCmd: 'install --force --json --no-package-lock'
 
-    - template: pipeline/NetBuild.yml@devopsTemplates
-      parameters:
-        applicationName: ${{variables.applicationFullName}}
+#    - template: pipeline/NetBuild.yml@devopsTemplates
+#      parameters:
+#        applicationName: ${{variables.applicationFullName}}
 
     - template: ../../secretsTransfer.yml
 
