--- a/secretsTransfer.yml
+++ b/secretsTransfer.yml
@@ -19,17 +19,17 @@
 # Code scaning tools
 #- stage: RevertSlotValidation
 #  displayName: Load Secrets in KeyVault 
-  jobs:
-  - job: waitForValidation
-    timeoutInMinutes: 2
-    pool: server
-    steps: 
-    - task: ManualValidation@0
-      inputs:
-        notifyUsers: 'test@test.com'
+#  jobs:
+#  - job: waitForValidation
+#    timeoutInMinutes: 2
+#    pool: server
+#    steps: 
+#    - task: ManualValidation@0
+#      inputs:
+#        notifyUsers: 'test@test.com'
   
   - job: test
-    dependsOn: waitForValidation
+#    dependsOn: waitForValidation
     steps: 
     - task: Bash@3
       inputs:
