Comments have been uncommented

--- a/secretsTransfer.yml
+++ b/secretsTransfer.yml
@@ -1,35 +1,35 @@
-#name: $(BuildDefinitionName)_tag-$(BuildID)_at-$(Date:yyyyMMdd)$(Rev:.r)
-#resources:
-#  repositories:
-#  # Defult branch is master
-#    - repository: devopsTemplates
-#      type: github
-#      endpoint: DfE-Digital
-#      name: DFE-Digital/login.dfe.devops
-#      ref: feature/DSI-5680
+name: $(BuildDefinitionName)_tag-$(BuildID)_at-$(Date:yyyyMMdd)$(Rev:.r)
+resources:
+  repositories:
+  # Defult branch is master
+    - repository: devopsTemplates
+      type: github
+      endpoint: DfE-Digital
+      name: DFE-Digital/login.dfe.devops
+      ref: feature/DSI-5680
 
-#variables:
-#- group: ncs-b2c-global
-#- group: ncs-b2c-dev
+variables:
+- group: ncs-b2c-global
+- group: ncs-b2c-dev
 
-#stages:
+stages:
 
 
     
 # Code scaning tools
-#- stage: RevertSlotValidation
-#  displayName: Load Secrets in KeyVault 
-#  jobs:
-#  - job: waitForValidation
-#    timeoutInMinutes: 2
-#    pool: server
-#    steps: 
-#    - task: ManualValidation@0
-#      inputs:
-#        notifyUsers: 'test@test.com'
+- stage: RevertSlotValidation
+  displayName: Load Secrets in KeyVault 
+  jobs:
+  - job: waitForValidation
+    timeoutInMinutes: 2
+    pool: server
+    steps: 
+    - task: ManualValidation@0
+      inputs:
+        notifyUsers: 'test@test.com'
   
   - job: test
-#    dependsOn: waitForValidation
+    dependsOn: waitForValidation
     steps: 
     - task: Bash@3
       inputs:
