--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -102,11 +102,11 @@ stages:
 
   - ${{ if eq(parameters.AppDeploy, 'true') }}:
 
-    - template:  pipeline/eslint.yml@devopsTemplates
+##    - template:  pipeline/eslint.yml@devopsTemplates
 
-    - template:  pipeline/dependencyCheck.yml@devopsTemplates
-      parameters:
-        npmInstCmd: 'install --force --json --no-package-lock'
+##    - template:  pipeline/dependencyCheck.yml@devopsTemplates
+##      parameters:
+##        npmInstCmd: 'install --force --json --no-package-lock'
 
     - template: pipeline/NetBuild.yml@devopsTemplates
       parameters:
