Changed the name of the application back again

--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -58,9 +58,9 @@ parameters:
 variables:
 - group: dsi-global
 - name: applicationShortName
-  value: 'authncstest'
+  value: 'authncs'
 - name: applicationFullName
-  value: 'authncstest'
+  value: 'authncs'
 - name: numberOfWorkers
   value: 1
 - name: tran
