--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -113,7 +113,7 @@ stages:
         applicationName: ${{variables.applicationFullName}}
 
 - ${{ each var in variables }}:
-  - ${{ if in(var.key, 'tran','dev','test','pp','pr') }}:
+  - ${{ if in(var.key, 'dev','test','pp','pr') }}:
     - ${{ if eq(var.value, 'true') }}:
       - stage: Deployment_${{var.Key}}
         displayName: "Deployment [${{var.Key}}]"
@@ -142,37 +142,37 @@ stages:
               environmentName: ${{var.key}}
               applicationName: ${{variables.applicationShortName}}
           
-          - template: pipeline/ncs-b2c/tenant-setup.yml@devopsTemplates
-            parameters:
-              ${{ if eq(var.key, 'tran') }}:
-                environmentName: tran
-                eapimRootUrl: ${{var.key}}-api-customerengagement.platform.education.gov.uk
-              ${{ if eq(var.key, 'dev') }}:
-                environmentName: dev
-                eapimRootUrl: ${{var.key}}-api-customerengagement.platform.education.gov.uk
-              ${{ elseif eq(var.key, 'pr') }}:
-                eapimRootUrl: api-customerengagement.platform.education.gov.uk
-                environmentName: prod
-              ${{ elseif eq(var.key, 'pp') }}:
-                  eapimRootUrl: oat-api-customerengagement.platform.education.gov.uk
-                  environmentName: preprod
-              ${{ elseif eq(var.key, 'test') }}:
-                eapimRootUrl: ${{var.key}}-api-customerengagement.platform.education.gov.uk
-                environmentName: test
-              applicationName: ${{variables.applicationShortName}}
+        #   - template: pipeline/ncs-b2c/tenant-setup.yml@devopsTemplates
+        #     parameters:
+        #       ${{ if eq(var.key, 'tran') }}:
+        #         environmentName: tran
+        #         eapimRootUrl: ${{var.key}}-api-customerengagement.platform.education.gov.uk
+        #       ${{ if eq(var.key, 'dev') }}:
+        #         environmentName: dev
+        #         eapimRootUrl: ${{var.key}}-api-customerengagement.platform.education.gov.uk
+        #       ${{ elseif eq(var.key, 'pr') }}:
+        #         eapimRootUrl: api-customerengagement.platform.education.gov.uk
+        #         environmentName: prod
+        #       ${{ elseif eq(var.key, 'pp') }}:
+        #           eapimRootUrl: oat-api-customerengagement.platform.education.gov.uk
+        #           environmentName: preprod
+        #       ${{ elseif eq(var.key, 'test') }}:
+        #         eapimRootUrl: ${{var.key}}-api-customerengagement.platform.education.gov.uk
+        #         environmentName: test
+        #       applicationName: ${{variables.applicationShortName}}
 
-        - ${{ if parameters.AppDeploy }}:
-          - template: pipeline/funDeploy.yml@devopsTemplates
-            parameters: 
-              ${{ if or(eq(var.key, 'dev'), eq(var.key, 'tran')) }}:
-                serviceConnection: $(devServiceConnection)
-              ${{ elseif eq(var.key, 'pr') }}:
-                serviceConnection: $(prodServiceConnection)
-              ${{ else }}:
-                serviceConnection: $(testServiceConnection)
-              environmentName: ${{var.key}}
-              applicationShortName: ${{variables.applicationShortName}}
-              applicationFullName: ${{variables.applicationFullName}}
-              releaseArtifactName: ${{variables.applicationFullName}}-$(Build.BuildId)-release
-              InfrDeploy: ${{parameters.InfrDeploy}}
+        # - ${{ if parameters.AppDeploy }}:
+        #   - template: pipeline/funDeploy.yml@devopsTemplates
+        #     parameters: 
+        #       ${{ if or(eq(var.key, 'dev'), eq(var.key, 'tran')) }}:
+        #         serviceConnection: $(devServiceConnection)
+        #       ${{ elseif eq(var.key, 'pr') }}:
+        #         serviceConnection: $(prodServiceConnection)
+        #       ${{ else }}:
+        #         serviceConnection: $(testServiceConnection)
+        #       environmentName: ${{var.key}}
+        #       applicationShortName: ${{variables.applicationShortName}}
+        #       applicationFullName: ${{variables.applicationFullName}}
+        #       releaseArtifactName: ${{variables.applicationFullName}}-$(Build.BuildId)-release
+        #       InfrDeploy: ${{parameters.InfrDeploy}}
     
