--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -113,7 +113,7 @@ stages:
         applicationName: ${{variables.applicationFullName}}
 
 - ${{ each var in variables }}:
-  - ${{ if in(var.key, 'dev','test','pp','pr') }}:
+  - ${{ if in(var.key, 'dev','test','pp','pr','tran') }}:
     - ${{ if eq(var.value, 'true') }}:
       - stage: Deployment_${{var.Key}}
         displayName: "Deployment [${{var.Key}}]"
