--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -168,8 +168,7 @@ stages:
               ${{ else }}:
                 serviceConnection: $(testServiceConnection)
               environmentName: ${{var.key}}
-              applicationShortName: ${{variables.applicationShortName}}
-              applicationFullName: ${{variables.applicationFullName}}
+              applicationName: ${{variables.applicationFullName}}
               releaseArtifactName: ${{variables.applicationFullName}}-$(Build.BuildId)-release
               InfrDeploy: ${{parameters.InfrDeploy}}
     
